Fix logo alignment in sidebar

--- a/hrms-master/src/components/sidebar.css
+++ b/hrms-master/src/components/sidebar.css
@@ -51,7 +51,7 @@
     display: flex;
     justify-content: flex-start;
     margin-bottom: 24px;
-    padding-left: 8px;
+
 }
 
 .sidebar-logo {
